--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="info">
                 <div class="title">
                     <h1>Course Application Form</h1>
-                    <small>Please fill in the form above to apply for this course.</small>
+                    <small>Please fill in the form below to apply for this course.</small>
                 </div>
                 <!--creating a form-->
                 <form id="form">
